Thu Oct 31 11:10:56 1996  Ezra Peisach  <epeisach@trane.rose.brandeis.edu>

	* Makefile.in (t_kdb): Link with $(TOPLIBD)/libdb.a

Wed Sep  4 19:29:57 1996  Tom Yu  <tlyu@mit.edu>

	* Makefile.in (t_kdb): Fix up dependencies of t_kdb so it will
		build on non-shared architectures; also ensure that libs
		get linked after the objects.

Fri Aug 23 16:34:45 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in (t_kdb): Fix Makefile so that t_kdb is linked
	 	correctly with the appropriate libraries.

Thu Aug 22 16:22:01 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* kdb_dbm.c: Remove vestigal code which was using BERK_DB_DBM
		define.  Still need to remove kludgey database "switch"
		code and recode to use the db interface.

	* t_kdb.c: Update t_kdb to use the new libkdb interface.

Mon Aug 12 14:11:29 1996  Barry Jaspan  <bjaspan@mit.edu>

	* kdb_dbm.c (krb5_dbm_db_rename): rename should not insist that
 	the target database not already exist

Fri Aug  9 15:21:34 1996  Ezra Peisach  <epeisach@dumpster.rose.brandeis.edu>

	* Makefile.in (shared): Convert shared:: to shared: so will not
		always be called upon. 

Thu Aug  8 20:26:47 1996  Tom Yu  <tlyu@mit.edu>

	* Makefile.in (shared): Always mkdir shared; test -d shared ||
		mkdir shared breaks under Ultrix sh (grrr...).

Thu Aug  8 18:29:15 1996  Sam Hartman  <hartmans@mit.edu>

	* keytab.c (krb5_ktkdb_get_entry): Return KRB5_KT_NOTFOUND if the
 	principal doesn't exist instead of dereferencing a null pointer.

Fri Aug  2 14:08:03 1996  Sam Hartman  <hartmans@mit.edu>

	* configure.in(LIBS): AIX wants to link against -ldb when building
 	the shared lib.

Mon Jul 29 23:07:14 1996  Samuel D Hartman  (hartmans@vorlon)

	* kdb_dbm.c: Don't bother referencing dbm_pagfno, because we don't
        actually use it; same for dbm_dirfno.

Tue Jul 23 11:09:08 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* Makefile.in: libkdb5.so needs to be built with
		libcrypto and libkrb5.
